# lcnn

./: CMakeLists.txt  blend_images_line_seg.py  demo_ros.launch  demo_ros.py  evaluate.sh  img_crop.launch  package.xml  requirements.txt
msg/: LineSegArray.msg
