<?xml version="1.0"?>
<package>
  <name>line_segment_detector</name>
  <version>0.0.0</version>
  <description>Detect line segment point pairs - rosified</description>

  <maintainer email="parthc@umich.edu">Parth Chopra</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
